🐛 fix overflow-x on body element

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -14,6 +14,7 @@ body {
     font-size: $font-medium;
     color: $grayish-blue;
     line-height: 1.3;
+    overflow-x: hidden;
 }
 
 h1, h2, h3 {
